--- a/src/Auxilium.FunctionApp/Auxilium.FunctionApp.csproj
+++ b/src/Auxilium.FunctionApp/Auxilium.FunctionApp.csproj
@@ -5,7 +5,13 @@
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="AzureExtensions.Swashbuckle" Version="3.2.2" />
-        <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.7" />
+        <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
+        <PackageReference Include="Microsoft.Azure.WebJobs" Version="3.0.25" />
+        <PackageReference Include="Microsoft.Azure.WebJobs.Core" Version="3.0.25" />
+        <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Http" Version="3.0.12" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.12" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.12" />
+        <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.11" />
     </ItemGroup>
     <ItemGroup>
         <None Update="host.json">
@@ -18,5 +24,6 @@
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\Auxilium.Core\Auxilium.Core.csproj" />
+      <ProjectReference Include="..\Auxilium.Infrastructure\Auxilium.Infrastructure.csproj" />
     </ItemGroup>
 </Project>
