--- a/src/Auxilium.FunctionApp/Auxilium.FunctionApp.csproj
+++ b/src/Auxilium.FunctionApp/Auxilium.FunctionApp.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="AzureExtensions.Swashbuckle" Version="3.2.2" />
+        <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.OpenApi" Version="0.5.1-preview" />
         <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.7" />
     </ItemGroup>
     <ItemGroup>
